--- a/pythonforall/home/templates/home/index.html
+++ b/pythonforall/home/templates/home/index.html
@@ -1,13 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
-        <title>solomon sucks</title>
-        {% load static %}
+        <title>Python For All</title>
         <link rel="stylesheet" href="{% static 'home/style.css' %}" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
     </head>
     <body>
-        <div style="height: 100%; width: 100%; color: white; display: flex; justify-content: center; align-items: center;">
-            solomon sucks
+        <div class="home-body">
+            <div class="home-header">
+                Gregory Pickett
+            </div>
+            <div class="home-body">
+
+            </div>
         </div>
     </body>
 </html>
