--- a/pythonforall/home/static/home/style.css
+++ b/pythonforall/home/static/home/style.css
@@ -1,5 +1,43 @@
-html, body {
-    background-color: black;
+html {
+    background-color: transparent;
     height: 100%;
     width: 100%;
+    padding: 0;
+    margin: 0; 
+}
+
+body {
+    background-color: rgb(24, 24, 24);
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.home-body {
+    flex: 1;
+    color: white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.home-header {
+    margin: 2vmin;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(243, 243, 243);
+    font-family: 'Special Elite', cursive;
+    font-size: 5vmin;
+    padding: 0.5vmin;
+    font-weight: bold;
+}
+
+.home-body {
+    flex: 18;
+    background: rgb(24, 24, 24);
 }
