--- a/pythonforall/home/static/home/style.css
+++ b/pythonforall/home/static/home/style.css
@@ -1,44 +1,68 @@
+
+/* font-family: 'Shrikhand', cursive;
+font-family: 'Rubik', sans-serif; */
 html {
-    background-color: transparent;
-    height: 100%;
-    width: 100%;
-    padding: 0;
-    margin: 0; 
+  background-color: transparent;
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    background-color: rgb(24, 24, 24);
-    height: 100%;
-    width: 100%;
-    padding: 0;
-    margin: 0;
+  background-color: rgb(24, 24, 24);
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .home-container {
-    flex: 1;
-    color: white;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+  flex: 1;
+  color: white;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .home-header {
-    margin: 2vmin;
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(243, 243, 243);
-    font-family: 'Special Elite', cursive;
-    font-size: 5vmin;
-    padding: 0.5vmin;
-    font-weight: bold;
+  margin: 2vmin;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(243, 243, 243);
+  font-family: 'Rubik', sans-serif;
+  font-size: 5vmin;
+  padding: 0.5vmin;
+  font-weight: bold;
 }
 
 .home-body {
-    flex: 18;
-    background: rgb(24, 24, 24);
-    color: white;
+  flex: 18;
+  background: rgb(24, 24, 24);
+  color: white;
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+
+.data {
+  background: rgb(20, 20, 20);
+  width: 100%;
+  display: inline-grid;
+  align-content: center;
+  justify-content: center;
+}
+
+.data-text {
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  font-size: 3vmin;
+  font-weight: bold;
+  background: rgba(24, 24, 24, 0.2);
+  padding: 5vmin;
+  font-family: 'Rubik', sans-serif;
 }
