--- a/pythonforall/home/templates/home/index.html
+++ b/pythonforall/home/templates/home/index.html
@@ -1,24 +1,26 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Python For All</title>
-        <link rel="stylesheet" href="{% static 'home/style.css' %}" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
-    </head>
-    <body>
-        <div class="home-container">
-            <div class="home-header">
-                Gregory Pickett
-            </div>
-            <div class="home-body">
-                {% for l in data %}
-                    <div>
-                        {{ l.title }}    
-                    </div>
 
-                {% endfor %}
-            </div>
+<head>
+    <title>Python For All</title>
+    <link rel="stylesheet" href="{% static 'home/style.css' %}" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Rubik|Shrikhand" rel="stylesheet">
+</head>
+
+<body>
+    <div class="home-container">
+        <div class="home-header">
+            Python For All
         </div>
-    </body>
+        <div class="home-body">
+            {% for l in data %}
+            <div class="data" style="background: url({{l.image}}) center">
+                <a class="data-text" href={{l.link}}>{{ l.title }}</a>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</body>
+
 </html>
